--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+	<style>
+		h1 { font-family:papyrus; }
+	</style>
+</head>
+
+
+
+
+
+<body>
+	<h1>This is Urist</h1>
+	<p>He likes to find dangerous places</p>
+
+
+</body>
+
+
+
+
+
+
+</html>
