--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+	<title>A Dwarf's Story</title>
+	<link rel="icon" href="images/favicon.ico">
+
 	<style>
+		img {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 20%;
+		}
 		h1 { font-family:papyrus; }
+		p { font-family:papyrus; }
 	</style>
 </head>
 
 
-
-
-
 <body>
-	<h1>This is Urist</h1>
-	<p>He likes to find dangerous places</p>
-
-
+	
+	<h1 style="text-align:center">This is Urist</h1>
+	<p style="text-align:center"><strong>He knows where to find danger</strong></p>
+	
+	<img style="text-align:center" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnvcfAcsmBv8mXciFWJfcGKBBrV269NpTWUMEYdTrFgl6J65nI8aHPoaOUsfCkLAuAJnA&usqp=CAU" alt="An image of a Dwarf pointing where is best to die.">
 </body>
-
-
-
-
-
-
 </html>
