Fixed font and size

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 			display: block;
 			margin-left: auto;
 			margin-right: auto;
-			width: 20%;
+			width: 15%;
 		}
 		h1 { font-family:papyrus; }
-		p { font-family:papyrus; }
+		h2 { font-family:papyrus; }
 	</style>
 </head>
 
@@ -20,8 +20,7 @@
 <body>
 	
 	<h1 style="text-align:center">This is Urist</h1>
-	<p style="text-align:center"><strong>He knows where to find danger</strong></p>
-	
-	<img style="text-align:center" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnvcfAcsmBv8mXciFWJfcGKBBrV269NpTWUMEYdTrFgl6J65nI8aHPoaOUsfCkLAuAJnA&usqp=CAU" alt="An image of a Dwarf pointing where is best to die.">
+	<h2 style="text-align:center"><strong>He knows where to find danger</strong></h2>
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnvcfAcsmBv8mXciFWJfcGKBBrV269NpTWUMEYdTrFgl6J65nI8aHPoaOUsfCkLAuAJnA&usqp=CAU" alt="An image of a Dwarf pointing where is best to die.">
 </body>
 </html>
