--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 
 
-<body>
+<body style="background-color:white">
 	
 	<h1 style="text-align:center">This is Urist</h1>
 	<h2 style="text-align:center"><strong>He knows where to find danger</strong></h2>
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnvcfAcsmBv8mXciFWJfcGKBBrV269NpTWUMEYdTrFgl6J65nI8aHPoaOUsfCkLAuAJnA&usqp=CAU" alt="An image of a Dwarf pointing where is best to die.">
+	<img src="https://i.redd.it/almstty19ai41.jpg" alt="An image of a Dwarf pointing where is best to die.">
 </body>
 </html>
