april commit test

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>A Dwarf's Story</title>
+	<title>RAWR</title>
 	<link rel="icon" href="images/favicon.ico">
 
 	<style>
@@ -21,6 +21,6 @@
 	
 	<h1 style="text-align:center">This is Urist</h1>
 	<h2 style="text-align:center"><strong>He knows where to find danger</strong></h2>
-	<img src="https://i.redd.it/almstty19ai41.jpg" alt="An image of a Dwarf pointing where is best to die.">
+	<img  style="border-radius:10%; border-style:solid; border-width:2px;" src="https://i.redd.it/almstty19ai41.jpg" alt="An image of a Dwarf pointing where is best to die.">
 </body>
 </html>
