--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<style>
 			body {
-				background: linear-gradient(0deg, #00FFFF 25%, #8888FF);
+				background: linear-gradient(0deg, #4F8E90 25%, #786745);
 				width: 100%;
 				height: 100%;
                 background-attachment: fixed;
