--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 	</head>
 
 	<body>
+		<a href="/thai_lao/index.html">Thai Lao Cuisine</a>
+	
 		<div name="title" class="centerText textFontPapyrus">
 			
 			<h1 class="textCenter">Island of Suffering</h1>
@@ -75,6 +77,7 @@
 			<button id="bLookForFood" class="btn-grad" onclick="butLookForFood()">Look for Food</button>
 			<button id="bLookForWater" class="btn-grad" onclick="butLookForWater()">Look for Water</button><br>
 			<button id="bWait" class="btn-grad" onclick="butWait()">Wait</button>
+			<button id="bSleep" class="btn-grad" onclick="butSleep()">Sleep</button>
 		</div>
 
 	<!-- js code must always be either before /body, or within head element -->
@@ -112,7 +115,6 @@
 		action();
 	}
 		
-		
 	function action() {
 	
 		<!-- Update -->
@@ -139,6 +141,12 @@
 		document.getElementById("strHudDay").innerHTML = intDays;
 		document.getElementById("strHudHours").innerHTML = intHours+":"+intMinutes+"0";
 		
+
+		
+
+	}
+	
+	function setDayColour(intHours) {
 		if (intHours == 5) {
 			document.querySelectorAll('p').forEach(e => e.style.color = "black");
 			document.querySelectorAll('h1').forEach(e => e.style.color = "black");
@@ -161,22 +169,26 @@
 			document.body.style = "background: linear-gradient(0deg, #00FFFF 25%, #8888FF); width: 100%; height: 100%; background-attachment: fixed; background-position: cover;"
 		}
 		
+		if (intHours == 18) {
+			document.body.style = "background: linear-gradient(0deg, #ECE75F 25%, #AA9200); width: 100%; height: 100%; background-attachment: fixed; background-position: cover;"
+		}
+		
 		if (intHours == 19) {
-			document.body.style = "background: linear-gradient(0deg, #FF9EA0 25%, #BBA200); width: 100%; height: 100%; background-attachment: fixed; background-position: cover;"
+			document.body.style = "background: linear-gradient(0deg, #BBA200 25%, #EE9EA0); width: 100%; height: 100%; background-attachment: fixed; background-position: cover;"
 		}
 		
 		if (intHours == 20) {
-			document.body.style = "background: linear-gradient(0deg, #BB6633 25%, #774500); width: 100%; height: 100%; background-attachment: fixed; background-position: cover;"
+			document.body.style = "background: linear-gradient(0deg, #BB6643 25%, #776500); width: 100%; height: 100%; background-attachment: fixed; background-position: cover;"
 		}
 		
 		if (intHours == 21) {
 			document.querySelectorAll('p').forEach(e => e.style.color = "white");
 			document.querySelectorAll('h1').forEach(e => e.style.color = "white");
 			document.body.style = "background: linear-gradient(0deg, #141215 25%, #181115); width: 100%; height: 100%; background-attachment: fixed; background-position: cover;";
-		}
-		
-
-	}	
+		}	
+	}
+	
+	
 	</script>
 	
 	
